Fixes misaligned stats text labels in game view.

--- a/app/ui/styles/item/dialogs.scss
+++ b/app/ui/styles/item/dialogs.scss
@@ -165,6 +165,6 @@
 		width: 60.0rem;
 		left: 50%;
 		margin-left: -30.0rem;
-		margin-top: 15.0rem;
+		margin-top: 25.0rem;
 	}
 }
